welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: value c is not a member of object String
String c = ""
       ^SlugSnail:6: error: reassignment to val
  c=getCouleurSol()
   ^SlugSnail:37: error: not found: value c
    if (getCouleurSol()==c) {
                         ^